<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_bottom_menu"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/demoFormFragment"
        android:name="com.activeprospect.trustedform.demo.presentation.view.demoform.DemoFormFragment"
        android:label="@string/label_demo_form"
        tools:layout="@layout/fragment_demo_form" />

    <fragment
        android:id="@+id/demoFormCompletedFragment"
        android:name="com.activeprospect.trustedform.demo.presentation.view.demoform.demoformcompleted.DemoFormCompletedFragment"
        android:label="@string/label_demo_form_completed"
        tools:layout="@layout/fragment_demo_completed" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.activeprospect.trustedform.demo.presentation.view.home.HomeFragment"
        android:label="@string/label_demo_app"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.activeprospect.trustedform.demo.presentation.view.contact.ContactFragment"
        android:label="@string/label_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>