<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSignInMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textSignInHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:text="@string/sign_in_header"
            android:textAppearance="@style/Text.Headline.Primary.ProximaNova.Bold"
            app:layout_constraintBottom_toTopOf="@id/textSignInSubheader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/sign_in_header" />

        <TextView
            android:id="@+id/textSignInSubheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/sign_in_subheader"
            android:textAppearance="@style/Text.Subtitle.Primary.ProximaNova.Regular"
            app:layout_constraintBottom_toTopOf="@id/layoutSignInEmail"
            app:layout_constraintEnd_toEndOf="@id/textSignInHeader"
            app:layout_constraintStart_toStartOf="@id/textSignInHeader"
            app:layout_constraintTop_toBottomOf="@id/textSignInHeader"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/sign_in_subheader" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSignInEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/sign_in_email_hint"
            app:layout_constraintBottom_toTopOf="@id/layoutSignInPassword"
            app:layout_constraintEnd_toEndOf="@id/textSignInSubheader"
            app:layout_constraintStart_toStartOf="@id/textSignInSubheader"
            app:layout_constraintTop_toBottomOf="@id/textSignInSubheader"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/textSignInPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSignInPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/sign_in_password_hint"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/textSignInForgotPassword"
            app:layout_constraintEnd_toEndOf="@id/layoutSignInEmail"
            app:layout_constraintStart_toStartOf="@id/layoutSignInEmail"
            app:layout_constraintTop_toBottomOf="@id/layoutSignInEmail"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textSignInForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:gravity="end"
            android:text="@string/sign_in_forgot_password"
            android:textAppearance="@style/Text.Subtitle.Primary.ProximaNova.Light"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@id/layoutSignInPassword"
            app:layout_constraintStart_toStartOf="@id/layoutSignInPassword"
            app:layout_constraintTop_toBottomOf="@id/layoutSignInPassword"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/sign_in_forgot_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:backgroundTint="@color/primary"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/textSignInSingUp"
            app:layout_constraintEnd_toEndOf="@id/layoutSignInPassword"
            app:layout_constraintStart_toStartOf="@id/layoutSignInPassword"
            app:layout_constraintTop_toBottomOf="@id/textSignInForgotPassword"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textSignInSingUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:gravity="center"
            android:text="@string/sign_in_sing_up"
            android:textAppearance="@style/Text.Subtitle.Primary.ProximaNova.Light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/sign_in_sing_up" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
